# azure-oidc

./: .gitlab-ci.yml  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yaml
azure_oidc/: __init__.py  auth.py  config.py  jwt_validation.py
azure_oidc/integrations/: falcon_middleware.py  flask_decorator.py
tests/: test_server.py
